调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -5,6 +5,34 @@
 {% block title %}首页{% endblock %}
 
 {% block content %}
+    <div class="home_content">
+         <div id="head_top">
+
+        <div id="logo">
+
+            <a href="/" target="_self" title="回首页"><img src="/static/images/logo1.png" border="0" onMouseOver="this.src='/static/images/logo2.png'" onMouseOut="this.src='/static/images/logo1.png'" /></a>
+
+        </div>
+        <div id="navigation">
+            <ul class="menu">
+                <li>
+                    <a href="/"><span class="menutitle">首页</span><span
+                            class="menudesc"></span></a>
+                </li>
+                <li>
+                    <a href="/home/ownpic"><span class="menutitle">自拍神器</span><span
+                            class="menudesc"></span></a>
+                </li>
+                <li>
+                    <a href="/home/about"><span class="menutitle">关于我们</span><span
+                            class="menudesc"></span></a>
+                </li>
+            </ul>
+        </div>
+        <div class="star"><a href="#" title="立即体验">立即体验</a></div>
+</div>
+    </div>
+
     <div class="main_content_home">
        <div class="main_content_home_con"></div>
     </div>
