--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,9 @@
 {% load static/images %}
 body {margin:0 auto; padding:0 auto; height: 100%;background-color: #cc3399;}
 
+
+.home_content{ width:100%;height: 590px; background: url("/static/images/home/home_bg.jpg") center no-repeat; }
+
 #head_top{width: 80%; height: 50px; margin: 10px auto; }
 #logo{float: left; width:180px; height: 45px; margin-top: 0px;}
 #logo img{width:180px; height: 45px;}
@@ -55,9 +58,8 @@ body a { color: black; text-decoration: none; }
     color: #333333;
 }
 
-.main_content {margin: 0 auto; clear: both;}
-.main_content_home{ width:100%;height: 500px; background: url("/static/images/home/home_bg.jpg") center no-repeat; }
-.main_content_home_con{width: 80%;height: 100%;margin: 0px auto;background: url("/static/images/home/home_slogn.png") left no-repeat;}
+.home_content {margin: 0 auto; clear: both;}
+.home_content_home{ width:100%;height: 590px; background: url("/static/images/home/home_bg.jpg") center no-repeat; }
 .head1{font-size: 36px;color: black;line-height: 80px;}
 .head2{font-size: 30px;color: #9900cc;line-height: 60px;}
 .head3{font-size: 24px; color:black;line-height: 60px;}
