--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,16 +2,16 @@
 body {margin:0 auto; padding:0 auto; height: 100%;background-color: #cc3399;}
 
 
-.home_content{ width:100%;height: 590px;background-size:100% 100%; background-image: url("/static/images/home/home_bg.jpg") center no-repeat; }
+.home_content{ width:100%;height: 590px;background-size:100% 100%; background: url("/static/images/home/home_bg.jpg") center no-repeat; }
 
 #head_top{width: 80%; height: 50px; margin: 10px auto; }
-#logo{float: left; width:180px; height: 45px; margin-top: 0px;}
+#logo{float: left; width:180px; height: 45px; margin-top: 0;}
 #logo img{width:180px; height: 45px;}
 
 #navigation ul.menu { float:left; height: 50px; text-align: left; }
 #navigation menu {list-style: none; }
 #navigation .menu > li { display: block; float: left;width: 90px;text-align: right;font-size: 16px; }
-#navigation .menu > li a{color: black;text-decoration: none; color: white;}
+#navigation .menu > li a{text-decoration: none; color: white;}
 #navigation .menu > li a:hover{text-decoration: none;font-weight: bold; }
 
 .star{float: right;width: 80px;height: 26px;font-size: 14px;border: 1px dashed #eeeeee;line-height: 26px;text-align: center;margin-top: 12px;}
