--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,9 +4,9 @@ body {margin:0 auto; padding:0 auto; height: 100%;background-color: #cc3399;}
 
 .home_content{ width:100%;height: 550px;background-size:100% 100%; background: url("/static/images/home/home_bg.jpg") center no-repeat; }
 
-#head_top{width: 80%; height: 50px; margin: 0 auto; padding-top: 10px;}
-#logo{float: left; width:180px; height: 45px; margin-top: 0;}
-#logo img{width:180px; height: 45px;}
+.head_top{width: 80%; height: 50px; margin: 0 auto; padding-top: 10px;}
+.logo{float: left; width:180px; height: 45px; margin-top: 0;}
+.logo img{width:180px; height: 45px;}
 
 .navigation ul.menu { float:left; height: 50px; text-align: left; }
 .navigation menu {list-style: none; }
