--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -6,14 +6,14 @@
 
 {% block content %}
     <div class="home_content">
-         <div id="head_top">
+         <div class="head_top">
 
-        <div id="logo">
+        <div class="logo">
 
             <a href="/" target="_self" title="回首页"><img src="/static/images/logo1.png" border="0" onMouseOver="this.src='/static/images/logo2.png'" onMouseOut="this.src='/static/images/logo1.png'" /></a>
 
         </div>
-        <div id="navigation">
+        <div class="navigation">
             <ul class="menu">
                 <li>
                     <a href="/"><span class="menutitle">首页</span><span
