--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,8 +10,8 @@ body {margin:0 auto; padding:0 auto; height: 100%;background-color: #cc3399;}
 
 .navigation ul.menu { float:left; height: 50px; text-align: left; }
 .navigation menu {list-style: none; }
-.navigation .menu > li { display: block; float: left;width: 90px;text-align: right;font-size: 16px; }
-.navigation .menu > li a{text-decoration: none; color: white;}
+.navigation .menu > li { display: block; float: left;width: 90px;text-align: right;font-size: 16px;font-weight: bold; }
+.navigation .menu > li a{text-decoration: none; color: white;font-weight: normal;}
 .navigation .menu > li a:hover{text-decoration: none;font-weight: bold; }
 .crunt{border-bottom: 2px solid white}
 
