--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -6,18 +6,15 @@
 
 {% block content %}
     <div class="home_content">
-         <div class="head_top">
+        <div class="head_top">
 
-        <div class="logo">
-
+          <div class="logo">
             <a href="/" target="_self" title="回首页"><img src="/static/images/logo1.png" border="0" onMouseOver="this.src='/static/images/logo2.png'" onMouseOut="this.src='/static/images/logo1.png'" /></a>
-
-        </div>
-        <div class="navigation">
+          </div>
+          <div class="navigation">
             <ul class="menu">
                 <li>
-                    <a href="/"><span class="menutitle">首页</span><span
-                            class="menudesc"></span></a>
+                    <span class="crunt">首页</span>
                 </li>
                 <li>
                     <a href="/home/ownpic"><span class="menutitle">自拍神器</span><span
@@ -29,7 +26,7 @@
                 </li>
             </ul>
         </div>
-        <div class="star"><a href="#" title="立即体验">立即体验</a></div>
+          <div class="star"><a href="#" title="立即体验">立即体验</a></div>
 </div>
     </div>
 
