--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,10 +10,10 @@ body {margin:0 auto; padding:0 auto; height: 100%;background-color: #cc3399;}
 
 .navigation ul.menu { float:left; height: 50px; text-align: left; }
 .navigation menu {list-style: none; }
-.navigation .menu > li { display: block; float: left;width: 90px;text-align: right;font-size: 16px;font-weight: bold; }
+.navigation .menu > li { display: block; float: left;width: 100px;text-align: right;font-size: 16px;font-weight: bold; }
 .navigation .menu > li a{text-decoration: none; color: white;font-weight: normal;}
 .navigation .menu > li a:hover{text-decoration: none;font-weight: bold; }
-.crunt{border-bottom: 2px solid white}
+.crunt{border-bottom: 2px solid white; color: white;}
 
 
 .star{float: right;width: 80px;height: 26px;font-size: 14px;border: 1px dashed #eeeeee;line-height: 26px;text-align: center;margin-top: 12px;}
