--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,8 @@ body {margin:0 auto; padding:0 auto; height: 100%;background-color: #cc3399;}
 
 
 .home_content{ width:100%;height: 550px;background-size:100% 100%; background: url("/static/images/home/home_bg.jpg") center no-repeat; }
+.home_slogn{float: left;width: 600px;height: 200px;margin-top: 80px;color: white;}
+
 
 .head_top{width: 80%; height: 50px; margin: 0 auto; padding-top: 10px;}
 .logo{float: left; width:180px; height: 45px; margin-top: 0;}
@@ -60,11 +62,10 @@ body a { color: black; text-decoration: none; }
     color: #333333;
 }
 
-.home_content {margin: 0 auto; clear: both;}
-.home_content_home{ width:100%;height: 590px; background: url("/static/images/home/home_bg.jpg") center no-repeat; }
 .head1{font-size: 36px;color: black;line-height: 80px;}
 .head2{font-size: 30px;color: #9900cc;line-height: 60px;}
 .head3{font-size: 24px; color:black;line-height: 60px;}
+.head4{font-size: 14px;color: black;line-height: 20px;}
 .head_jx{font-size: 24px; color:black;line-height: 60px; padding-top: 70px;padding-bottom: 40px;}
 .col{color: #9900cc;font-weight: bold;}
 .rec{
