调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -28,6 +28,10 @@
         </div>
           <div class="star"><a href="#" title="立即体验">立即体验</a></div>
 </div>
+        <div class="home_slogn">
+            <h1>轻生活 轻旅行 嗨自拍</h1>
+            <h4>随处可用的自拍神器，助你留影记录美丽、签到分享精彩</h4>
+        </div>
     </div>
 
     <div class="main_content_home">
