--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@ body {margin:0 auto; padding:0 auto; height: 100%;background-color: #cc3399;}
 
 
 .home_content{ width:100%;height: 550px;background-size:100% 100%; background: url("/static/images/home/home_bg.jpg") center no-repeat; }
-.home_slogn{float: left;width: 600px;height: 200px;margin-top: 80px;color: white;}
+.home_slogn{width: 80%;height: 200px;margin-top: 80px;color: white;text-align: left;}
 
 
 .head_top{width: 80%; height: 50px; margin: 0 auto; padding-top: 10px;}
