--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@ body {margin:0 auto; padding:0 auto; height: 100%;background-color: #cc3399;}
 
 
 .home_content{ width:100%;height: 550px;background-size:100% 100%; background: url("/static/images/home/home_bg.jpg") center no-repeat; }
-.home_slogn{width: 80%;color: white;text-align: left;margin: 50px auto;}
+.home_slogn{width: 80%;color: white;text-align: left;margin: 150px auto;}
 
 
 .head_top{width: 80%; height: 50px; margin: 0 auto; padding-top: 10px;}
@@ -62,10 +62,10 @@ body a { color: black; text-decoration: none; }
     color: #333333;
 }
 
-.head1{font-size: 36px;color: black;line-height: 80px;}
+.head1{font-size: 48px;color: black;line-height: 50px;font-weight: normal;}
 .head2{font-size: 30px;color: #9900cc;line-height: 60px;}
 .head3{font-size: 24px; color:black;line-height: 60px;}
-.head4{font-size: 14px;color: black;line-height: 20px;}
+.head4{font-size: 14px;color: black;line-height: 20px; font-weight: normal;}
 .head_jx{font-size: 24px; color:black;line-height: 60px; padding-top: 70px;padding-bottom: 40px;}
 .col{color: #9900cc;font-weight: bold;}
 .rec{
