--- a/static/css/style.css
+++ b/static/css/style.css
@@ -62,10 +62,10 @@ body a { color: black; text-decoration: none; }
     color: #333333;
 }
 
-.head1{font-size: 60px;line-height: 50px;font-weight: 100;}
+.h1{font-size: 60px;line-height: 50px;font-weight: 100;}
 .head2{font-size: 30px;color: #9900cc;line-height: 60px;}
 .head3{font-size: 24px; color:black;line-height: 60px;}
-.head4{font-size: 14px;line-height: 20px; font-weight:100;}
+.h4{font-size: 14px;line-height: 20px; font-weight:100;}
 .head_jx{font-size: 24px; color:black;line-height: 60px; padding-top: 70px;padding-bottom: 40px;}
 .col{color: #9900cc;font-weight: bold;}
 .rec{
