--- a/static/css/style.css
+++ b/static/css/style.css
@@ -62,7 +62,7 @@ body a { color: black; text-decoration: none; }
     color: #333333;
 }
 
-h1{font-size: 48px;line-height: 48px;font-weight: 200;padding-left: 20px;}
+h1{font-size: 48px;line-height: 48px;font-weight: 200;padding-left: 20px;padding-top: 20px;}
 .head2{font-size: 30px;color: #9900cc;line-height: 60px;}
 .head3{font-size: 24px; color:black;line-height: 60px;}
 h4{font-size: 16px;line-height: 16px; font-weight:200;padding-left: 20px;}
