--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 {% load static/images %}
-body {margin:0 auto; padding:0 auto; height: 100%;background-color: #cc3399;}
+body {margin:0 auto; padding:0 auto; height: 100%;}
 
 
 .home_content{ width:100%;height: 550px;background-size:100% 100%; background: url("/static/images/home/home_bg.jpg") center no-repeat; }
@@ -17,6 +17,19 @@ body {margin:0 auto; padding:0 auto; height: 100%;background-color: #cc3399;}
 .navigation .menu > li a:hover{text-decoration: none;font-weight: bold; }
 .crunt{border-bottom: 1px solid white; color: white;}
 
+
+h1{font-size: 48px;line-height: 48px;font-weight: 200;padding-left: 20px;padding-top: 20px;}
+h2{font-size: 30px;color: black;line-height: 40px;}
+h3{font-size: 24px; color:black;line-height: 60px;}
+h4{font-size: 16px;line-height: 16px; font-weight:200;padding-left: 20px;}
+h5{font-size: 14px;line-height: 16px; font-weight:200;padding-left: 20px;}
+h6{font-size: 14px;line-height: 16px; font-weight:200;padding-left: 20px; color: #cc3399;}
+
+
+.con_white{width: 80%;margin: 50px auto;}
+.home_ys{float: left;width:360px;height: 400px;margin-right: 20px; text-align: center;}
+.home_img{float:left;width: 320px;height: 240px;overflow: hidden;}
+.home_ys_sm{float: left;width: 100%;font-size: 14px;line-height: 18px;color: #666666;}
 
 .star{float: right;width: 80px;height: 26px;font-size: 14px;border: 1px dashed #eeeeee;line-height: 26px;text-align: center;margin-top: 12px;}
 .star a{text-decoration: none;color: white;}
@@ -62,10 +75,7 @@ body a { color: black; text-decoration: none; }
     color: #333333;
 }
 
-h1{font-size: 48px;line-height: 48px;font-weight: 200;padding-left: 20px;padding-top: 20px;}
-.head2{font-size: 30px;color: #9900cc;line-height: 60px;}
-.head3{font-size: 24px; color:black;line-height: 60px;}
-h4{font-size: 16px;line-height: 16px; font-weight:200;padding-left: 20px;}
+
 .head_jx{font-size: 24px; color:black;line-height: 60px; padding-top: 70px;padding-bottom: 40px;}
 .col{color: #9900cc;font-weight: bold;}
 .rec{
