调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -33,6 +33,17 @@
             <h4>随处可用的自拍神器，助你留影记录美丽、签到分享精彩</h4>
         </div>
     </div>
+    <div class="con_white">
+       <div class="home_ys">
+           <div class="home_ys_img"><img src="{% static 'images/home/home_qs.jpg' %}"></div>
+           <h6>旅行是生活必须</h6>
+           <div class="home_ys_sm">人生除了奋斗，还需要享受<br>
+                当你累时，你可去旅行<br>
+                享受自然的美丽，呼吸新鲜空气，交新朋友<br>
+                带着心灵去轻松旅行，不必大包小包全副武装<br>
+                你负责发现精彩，我负责备好自拍神器<br></div>
+       </div>
+    </div>
 
     <div class="main_content_home">
        <div class="main_content_home_con"></div>
