调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -34,6 +34,8 @@
         </div>
     </div>
     <div class="con_white">
+       <h2>当旅游遇上共享</h2>
+        <h5>出游拍照留念发朋友圈是必须的，有了共享更应该是轻松方便的</h5>
        <div class="home_ys">
            <div class="home_ys_img"><img src="{% static 'images/home/home_qs.jpg' %}"></div>
            <h6>旅行是生活必须</h6>
