--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,10 +19,10 @@ body {margin:0 auto; padding:0 auto; height: 100%;}
 
 
 h1{font-size: 48px;line-height: 48px;font-weight: 200;padding-left: 20px;padding-top: 20px;}
-h2{font-size: 30px;color: black;line-height: 40px;}
+h2{font-size: 30px;color: black;line-height: 30px;text-align: center;}
 h3{font-size: 24px; color:black;line-height: 60px;}
 h4{font-size: 16px;line-height: 16px; font-weight:200;padding-left: 20px;}
-h5{font-size: 14px;line-height: 16px; font-weight:200;padding-left: 20px;}
+h5{font-size: 14px;line-height: 16px; font-weight:200;padding-left: 20px;text-align: center;}
 h6{font-size: 14px;line-height: 16px; font-weight:200;padding-left: 20px; color: #cc3399;}
 
 
