--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,12 +23,13 @@ h2{font-size: 30px;color: black;line-height: 30px;text-align: center;}
 h3{font-size: 24px; color:black;line-height: 60px;}
 h4{font-size: 16px;line-height: 16px; font-weight:200;padding-left: 20px;}
 h5{font-size: 14px;line-height: 16px; font-weight:200;padding-left: 20px;text-align: center;margin-bottom: 60px;}
-h6{font-size: 14px;line-height: 16px; font-weight:200;padding-left: 20px; color: #cc3399;}
+h6{font-size: 14px;line-height: 16px;padding-left: 20px; color: #cc3399;font-weight: bold}
 
 
 .con_white{width: 80%;margin: 50px auto;}
 .home_ys{float: left;width:360px;height: 400px;margin-right: 20px; text-align: center;}
 .home_ys_img{float:left;width: 320px;height: 240px;overflow: hidden;}
+.ys_imge{width: 320px;height: 240px; }
 .home_ys_sm{float: left;width: 100%;font-size: 14px;line-height: 18px;color: #666666;}
 
 .star{float: right;width: 80px;height: 26px;font-size: 14px;border: 1px dashed #eeeeee;line-height: 26px;text-align: center;margin-top: 12px;}
