--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,7 +23,7 @@ h2{font-size: 30px;color: black;line-height: 30px;text-align: center;}
 h3{font-size: 24px; color:black;line-height: 60px;}
 h4{font-size: 16px;line-height: 16px; font-weight:200;padding-left: 20px;}
 h5{font-size: 14px;line-height: 16px; font-weight:200;padding-left: 20px;text-align: center;margin-bottom: 60px;}
-h6{font-size: 14px;line-height: 16px;padding-left: 20px; color: #cc3399;font-weight: bold}
+h6{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold}
 
 
 .con_white{width: 80%;margin: 50px auto;}
