--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,7 +28,7 @@ h6{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold}
 
 .con_white{width: 80%;margin: 50px auto;}
 .home_ys{float: left;width:320px;height: 400px;margin-right: 20px; text-align: center;}
-.home_ys_img{float:left;width: 100%px;overflow: hidden;}
+.home_ys_img{float:left;width: 100%;overflow: hidden;}
 .ys_imge{width:100%;height: auto; }
 .home_ys_sm{float: left;width: 100%;font-size: 14px;line-height: 18px;color: #666666;}
 
