调整官网首页

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,7 +27,7 @@ h6{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold}
 
 
 .con_white{width: 80%;margin: 50px auto;text-align: center;}
-.home_ys{float: left;width:300px;height: 400px;margin-right: 30px; text-align: center;}
+.home_ys{float: left;width:23%;height: 400px;margin-right: 30px; text-align: center;}
 .home_ys_img{float:left;width: 100%;overflow: hidden;}
 .ys_imge{width:100%;height: auto; }
 .home_ys_sm{float: left;width: 100%;font-size: 14px;line-height: 22px;color: #666666;margin-top: -40px;font-weight: 100;}
