--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,7 +22,7 @@ h1{font-size: 48px;line-height: 48px;font-weight: 200;padding-left: 20px;padding
 h2{font-size: 30px;color: black;line-height: 30px;text-align: center;}
 h3{font-size: 24px; color:black;line-height: 60px;}
 h4{font-size: 16px;line-height: 16px; font-weight:200;padding-left: 20px;}
-h5{font-size: 14px;line-height: 16px; font-weight:200;padding-left: 20px;text-align: center;margin-bottom: 60px;}
+h5{font-size: 14px;line-height: 16px; font-weight:100;padding-left: 20px;text-align: center;margin-bottom: 60px;color: #666666}
 h6{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold}
 
 
