调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -40,7 +40,6 @@
            <div class="home_ys_img"><img class="ys_imge" src="{% static 'images/home/home_qs.jpg' %}"></div>
            <h6>旅行是生活必须</h6>
            <div class="home_ys_sm">人生除了奋斗，还需要享受<br>
-                当你累时，你可去旅行<br>
                 享受自然的美丽，呼吸新鲜空气，交新朋友<br>
                 带着心灵去轻松旅行，不必大包小包全副武装<br>
                 你负责发现精彩，我负责备好自拍神器</div>
@@ -56,7 +55,7 @@
        <div class="home_ys ys_right">
            <div class="home_ys_img"><img class="ys_imge" src="{% static 'images/home/home_ss.jpg' %}"></div>
            <h6>自拍杆是随手可用的</h6>
-           <div class="home_ys_sm">手短镜头近，自拍杆来搞定<br>
+           <div class="home_ys_sm">
                   美景精彩全入镜，只需自拍神器<br>
                   任意狂拍不求人，共享自拍神器随你嗨<br>
                   自拍神器遍布景点，随手可借还省事<br>
