调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -39,27 +39,17 @@
        <div class="home_ys">
            <div class="home_ys_img"><img class="ys_imge" src="{% static 'images/home/home_qs.jpg' %}"></div>
            <h6>旅行是生活必须</h6>
-           <div class="home_ys_sm">人生除了奋斗，还需要享受<br>
-                享受自然的美丽，呼吸新鲜空气，交新朋友<br>
-                带着心灵去轻松旅行，不必大包小包全副武装<br>
-                你负责发现精彩，我负责备好自拍神器</div>
+           <div class="home_ys_sm">"旅行对我来说，是恢复青春活力的源泉。"<br>--安徒生</div>
        </div>
        <div class="home_ys">
            <div class="home_ys_img"><img class="ys_imge" src="{% static 'images/home/home_pz.jpg' %}"></div>
            <h6>拍照是必须的</h6>
-           <div class="home_ys_sm">没有自拍，等于精彩没发生<br>
-               生活不易，唯有自拍证明你还存在<br>
-               自拍不是病而是文化，是新的沟通表达方式<br>
-               举起手机随时自拍，打卡签到记录</div>
+           <div class="home_ys_sm">"好的照片，可以讲出一个故事，可以交流一种思想或表达一种感情。"<br>--（中国摄影记者）陶然</div>
        </div>
        <div class="home_ys ys_right">
            <div class="home_ys_img"><img class="ys_imge" src="{% static 'images/home/home_ss.jpg' %}"></div>
            <h6>自拍杆是随手可用的</h6>
-           <div class="home_ys_sm">
-                  美景精彩全入镜，只需自拍神器<br>
-                  任意狂拍不求人，共享自拍神器随你嗨<br>
-                  自拍神器遍布景点，随手可借还省事<br>
-                  微信支付宝扫码即用，方便快捷又简单</div>
+           <div class="home_ys_sm">"有时候放弃并不是不爱，而是太麻烦而累觉不爱。"<br>--网友</div>
        </div>
     </div>
 
