--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -38,17 +38,17 @@
         <h5>出游拍照留念发朋友圈是必须的，有了共享更应该是轻松方便的</h5>
        <div class="home_ys">
            <div class="home_ys_img"><img class="ys_imge" src="{% static 'images/home/home_qs.jpg' %}"></div>
-           <h6>旅行是生活必须</h6>
-           <div class="home_ys_sm">"旅行对我来说，是恢复青春活力的源泉。"<br>--安徒生</div>
+           <h6>生命需要旅行</h6>
+           <div class="home_ys_sm">"旅行的真谛，不是运动，而是带动你的灵魂，去寻找到生命的春光。"<br>--梭罗</div>
        </div>
        <div class="home_ys">
            <div class="home_ys_img"><img class="ys_imge" src="{% static 'images/home/home_pz.jpg' %}"></div>
-           <h6>拍照是必须的</h6>
+           <h6>旅行需要拍照</h6>
            <div class="home_ys_sm">"好的照片，可以讲出一个故事，可以交流一种思想或表达一种感情。"<br>--（中国摄影记者）陶然</div>
        </div>
        <div class="home_ys ys_right">
            <div class="home_ys_img"><img class="ys_imge" src="{% static 'images/home/home_ss.jpg' %}"></div>
-           <h6>自拍杆是随手可用的</h6>
+           <h6>拍照需要自拍杆</h6>
            <div class="home_ys_sm">"有时候放弃并不是不爱，而是太麻烦而累觉不爱。"<br>--网友</div>
        </div>
     </div>
