调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -39,7 +39,7 @@
        <div class="home_ys">
            <div class="home_ys_img"><img class="ys_imge" src="{% static 'images/home/home_qs.jpg' %}"></div>
            <h6>生命需要旅行</h6>
-           <div class="home_ys_sm">"旅行的真谛，不是运动，而是带动你的灵魂，去寻找到生命的春光。"<br>--梭罗</div>
+           <div class="home_ys_sm">"旅行的真谛，不是运动，而是带动你的灵魂，去寻找到生命的春光。"<br>--（美国作家哲学家）梭罗</div>
        </div>
        <div class="home_ys">
            <div class="home_ys_img"><img class="ys_imge" src="{% static 'images/home/home_pz.jpg' %}"></div>
@@ -49,7 +49,7 @@
        <div class="home_ys ys_right">
            <div class="home_ys_img"><img class="ys_imge" src="{% static 'images/home/home_ss.jpg' %}"></div>
            <h6>拍照需要自拍杆</h6>
-           <div class="home_ys_sm">"有时候放弃并不是不爱，而是太麻烦而累觉不爱。"<br>--网友</div>
+           <div class="home_ys_sm">"君子生非异也，善假于物也。好的自拍照片，离不开自拍神器"<br>--（战国末期思想家教育家）荀子</div>
        </div>
     </div>
 
