调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -52,6 +52,11 @@
            <div class="home_ys_sm">"君子生非异也，善假于物也。好的自拍照片，离不开自拍神器"<br>--（战国末期思想家教育家）荀子</div>
        </div>
     </div>
+    <div class="con_gray">
+       <h2> 租根自拍杆尽情自拍</h2>
+       <h5>不用购买和携带，随借随还。消费升级，轻松出游。再也不用担心忘带了</h5>
+       <div class="home_sy"></div>
+    </div>
 
     <div class="main_content_home">
        <div class="main_content_home_con"></div>
@@ -62,53 +67,5 @@
 共享不是将就,而是一种时尚潮流和生活方式<br>
 <span class="head2">轻拍科技,以共享自拍杆为基点,开启旅行共享时代,享受轻生活</span>
     </div>
-    <div class="cont_big_gra">
-       <div class="home_cont">
-           <div class="home_cont_img"><img src="{% static 'images/home/home_t1.png' %}"></div>
-           <div class="home_cont_text">
-            <span class="head1">旅行是需要的</span><br>
-            <span>人生除了奋斗，还需要享受<br>
-                当你累时，你可去旅行<br>
-                享受自然的美丽，呼吸新鲜空气，交新朋友<br>
-                带着心灵去轻松旅行，不必大包小包全副武装<br>
-                你负责发现精彩，我负责备好自拍神器<br>
-                </span>
-            <div class="rec">"旅行对我来说，是恢复青春活力的源泉。"<br>--安徒生</div>
-         </div>
-       </div>
-    </div>
-
-    <div class="cont_big_white">
-       <div class="home_cont">
-           <div class="home_cont_img_rig"><img src="{% static 'images/home/home_t2.png' %}"></div>
-           <div class="home_cont_text_rig">
-            <span class="head1">拍照是必须的</span><br>
-            <span>没有自拍，等于精彩没发生<br>
-               生活不易，唯有自拍证明你还存在<br>
-               自拍不是病而是文化，是新的沟通表达方式<br>
-               举起手机随时自拍，打卡签到记录
-                </span>
-
-               <div class="rec_rig">"好的照片，可以讲出一个故事，可以交流一种思想或表达一种感情。"<br>--（中国摄影记者）陶然</div>
-         </div>
-       </div>
-    </div>
-
-    <div class="cont_big_gra">
-       <div class="home_cont">
-           <div class="home_cont_img"><img src="{% static 'images/home/home_t3.png' %}"></div>
-           <div class="home_cont_text">
-            <span class="head1">自拍杆是随手可用的</span><br>
-            <span>手短镜头近，自拍杆来搞定<br>
-                  美景精彩全入镜，只需自拍神器<br>
-                  任意狂拍不求人，共享自拍神器随你嗨<br>
-                  自拍神器遍布景点，随手可借还省事<br>
-                  微信支付宝扫码即用，方便快捷又简单<br>
-                </span>
-            <div class="rec">"有时候放弃并不是不爱，而是太麻烦而累觉不爱。"<br>--网友</div>
-         </div>
-       </div>
-    </div>
-
 
 {% endblock %}
