调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -5,7 +5,8 @@
 {% block title %}首页{% endblock %}
 
 {% block content %}
-    <div class="home_content">
+    <div class="home_content_bg">
+       <div class="home_content">
         <div class="head_top">
 
           <div class="logo">
@@ -32,6 +33,7 @@
             <h1>轻生活 轻旅行 嗨自拍</h1>
             <h4>随处可用的自拍神器，助你留影记录美丽、签到分享精彩</h4>
         </div>
+    </div>
     </div>
     <div class="con_white">
        <h2>当旅游遇上共享</h2>
