--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,8 +2,8 @@
 body {margin:0 auto; padding:0 auto; height: 100%;}
 
 
-.home_content_bg{ width:100%;height: 550px; background: url("/static/images/home/home_bgt.jpg")  repeat-y; }
-.home_content{ width:100%;height:100%;background-size:100% 100%; background: url("/static/images/home/home_bg.jpg") center no-repeat; }
+.home_content_bg{ width:100%;height: 550px; background: url("/static/images/home/home_bgt.jpg") repeat-y; }
+.home_content{ width:100%;height: 550px;background-size:100% 100%; background: url("/static/images/home/home_bg.jpg") center no-repeat; }
 .home_slogn{width: 80%;color: white;text-align: left;margin: 150px auto;}
 
 
