--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,7 +28,7 @@ h6{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold}
 
 
 .con_white{width: 80%;margin: 50px auto;text-align: center;}
-.con_gray{width: 100%;background-color: #f6f6f6;clear: both;padding:50px auto;}
+.con_gray{width: 100%;background-color: #f6f6f6;clear: both;padding-top:50px; padding-bottom: 50px;}
 
 .home_ys{float: left;width:31%;height: 400px;margin-right: 3%; text-align: center;}
 .home_ys_img{float:left;width: 100%;overflow: hidden;}
