--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,13 +30,14 @@ h6{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold}
 .con_white{width: 80%;margin: 50px auto;text-align: center;}
 .con_gray{width: 100%;background-color: #f6f6f6;clear: both;padding-top:50px; padding-bottom: 50px;}
 
-.home_ys{float: left;width:31%;height: 400px;margin-right: 3%; text-align: center;}
+.home_ys{float: left;width:31%;height: 380px;margin-right: 3%; text-align: center;}
 .home_ys_img{float:left;width: 100%;overflow: hidden;}
 .ys_imge{width:100%;height: auto; }
 .home_ys_sm{float: left;width: 100%;font-size: 14px;line-height: 22px;color: #666666;margin-top: -40px;font-weight: 100;}
 .ys_right{margin-right: 0;}
 
 .home_sy{width: 1000px; height: 500px; margin: 50px auto;background-size:100% 100%; background: url("/static/images/home/home_sy.jpg") center no-repeat;}
+.sy1{width: 150px;height: 30px;position: relative;margin-top: 300px;margin-left: 50px;}
 
 
 
