--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -58,7 +58,7 @@
        <h2> 租根自拍杆尽情自拍</h2>
        <h5>不用购买和携带，随借随还。消费升级，轻松出游。再也不用担心忘带了</h5>
        <div class="home_sy">
-           <div class="sy1"><h6>就近机柜，随手可用</h6></div>
+           <div class="sy1">就近机柜，随手可用</div>
        </div>
     </div>
 
