调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -59,6 +59,8 @@
        <h5>不用购买和携带，随借随还。消费升级，轻松出游。再也不用担心忘带了</h5>
        <div class="home_sy">
            <div class="sy1">就近机柜，随手可用</div>
+           <div class="sy1 sy2">手机扫码，1秒取杆</div>
+
        </div>
     </div>
 
