--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -60,7 +60,8 @@
        <div class="home_sy">
            <div class="sy1">就近机柜，随手可用</div>
            <div class="sy1 sy2">手机扫码，1秒取杆</div>
-
+           <div class="sy1 sy3">享受美好，想拍就拍</div>
+           <div class="sy1 sy4">随处可还，付几块钱</div>
        </div>
     </div>
 
