调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -59,7 +59,7 @@
        <h5>不用购买和携带，随借随还。消费升级，轻松出游。再也不用担心忘带了</h5>
        <div class="home_sy">
            <div class="sy1">就近机柜，随手可用</div>
-           <div class="sy1 sy2">手机扫码，1秒取杆</div>
+           <div class="sy1 sy2">手机扫码，一秒取杆</div>
            <div class="sy1 sy3">享受美好，想拍就拍</div>
            <div class="sy1 sy4">随处可还，付几块钱</div>
        </div>
