--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -64,6 +64,26 @@
            <div class="sy1 sy4">随处可还，付几块钱</div>
        </div>
     </div>
+    <div class="con_white">
+       <h2>开启旅行共享时代 享受时尚轻生活</h2>
+        <h5>轻拍科技，以共享自拍杆为基点。利用技术结合共享模式，让您的出游更轻松</h5>
+       <div class="home_ys">
+           <div class="home_ys_img"><img class="icon_img" src="{% static 'images/home/paizhao.png' %}"></div>
+           <h6>自拍更完美</h6>
+           <div class="home_ys_sm">"自拍杆作为神器，让你自拍更随意更完美更方便，拍照不求人也能很好的合影和自拍留影</div>
+       </div>
+       <div class="home_ys">
+           <div class="home_ys_img"><img class="ys_imge" src="{% static 'images/home/home_pz.jpg' %}"></div>
+           <h6>旅行需要拍照</h6>
+           <div class="home_ys_sm">"好的照片，可以讲出一个故事，可以交流一种思想或表达一种感情。"<br>--（中国摄影记者）陶然</div>
+       </div>
+       <div class="home_ys ys_right">
+           <div class="home_ys_img"><img class="ys_imge" src="{% static 'images/home/home_ss.jpg' %}"></div>
+           <h6>拍照需要自拍杆</h6>
+           <div class="home_ys_sm">"君子生非异也，善假于物也。好的自拍照片，离不开自拍神器"<br>--（战国末期思想家教育家）荀子</div>
+       </div>
+    </div>
+
 
     <div class="main_content_home">
        <div class="main_content_home_con"></div>
