--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,6 +42,7 @@ h6{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold}
 .sy3{padding-top: 215px;padding-left: 250px;}
 .sy4{padding-top: 235px;padding-left: 675px;}
 
+.icon_ys{width:30%;height: 380px;margin-right: 5%; }
 .icon_img{width: 60px;height: auto;overflow: hidden;}
 
 
