调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -73,14 +73,14 @@
            <div class="home_ys_sm">"自拍杆作为神器，让你自拍更随意更完美更方便，拍照不求人也能很好的合影和自拍留影</div>
        </div>
        <div class="home_ys icon_ys">
-           <div class="home_ys_img"><img class="ys_imge" src="{% static 'images/home/home_pz.jpg' %}"></div>
-           <h6>旅行需要拍照</h6>
-           <div class="home_ys_sm">"好的照片，可以讲出一个故事，可以交流一种思想或表达一种感情。"<br>--（中国摄影记者）陶然</div>
+           <div class="home_ys_img"><img class="ys_imge" src="{% static 'images/home/shengxin.png' %}"></div>
+           <h6>出游更省心</h6>
+           <div class="home_ys_sm">"无需购买和携带，不用担心出门忘带。为您舟车过程减轻包袱，在景区为您备好自拍神器</div>
        </div>
        <div class="home_ys icon_ys ys_right">
-           <div class="home_ys_img"><img class="ys_imge" src="{% static 'images/home/home_ss.jpg' %}"></div>
-           <h6>拍照需要自拍杆</h6>
-           <div class="home_ys_sm">"君子生非异也，善假于物也。好的自拍照片，离不开自拍神器"<br>--（战国末期思想家教育家）荀子</div>
+           <div class="home_ys_img"><img class="ys_imge" src="{% static 'images/home/bianjie.png' %}"></div>
+           <h6>使用更便捷</h6>
+           <div class="home_ys_sm">"在景区随借随还，无需安装APP，扫码即取放回即还。让你1秒钟即可神器到手</div>
        </div>
     </div>
 
