调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -77,7 +77,7 @@
            <h6>出游更省心</h6>
            <div class="home_ys_sm">"无需购买和携带，不用担心出门忘带。为您舟车过程减轻包袱，在景区为您备好自拍神器</div>
        </div>
-       <div class="home_ys icon_ys ys_right">
+       <div class="home_ys icon_ys_right">
            <div class="home_ys_img"><img class="icon_img" src="{% static 'images/home/bianjie.png' %}"></div>
            <h6>使用更便捷</h6>
            <div class="home_ys_sm">"在景区随借随还，无需安装APP，扫码即取放回即还。让你1秒钟即可神器到手</div>
