调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -70,12 +70,12 @@
        <div class="home_ys icon_ys">
            <div class="home_ys_img"><img class="icon_img" src="{% static 'images/home/paizhao.png' %}"></div>
            <h6>自拍更完美</h6>
-           <div class="home_ys_sm">"自拍杆作为神器，让你自拍更随意更完美更方便，拍照不求人也能很好的合影和自拍留影</div>
+           <div class="home_ys_sm">让你自拍更随意更完美更方便，不求人也能拍出很好的合影和个人留影</div>
        </div>
        <div class="home_ys icon_ys">
            <div class="home_ys_img"><img class="icon_img" src="{% static 'images/home/shengxin.png' %}"></div>
            <h6>出游更省心</h6>
-           <div class="home_ys_sm">"无需购买和携带，不用担心出门忘带。为您舟车过程减轻包袱，在景区为您备好自拍神器</div>
+           <div class="home_ys_sm">无需购买和携带，不用担心出门忘带，为您舟车过程减轻包袱</div>
        </div>
        <div class="home_ys icon_ys_right">
            <div class="home_ys_img"><img class="icon_img" src="{% static 'images/home/bianjie.png' %}"></div>
