调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -82,6 +82,21 @@
            <h6>使用更便捷</h6>
            <div class="home_ys_sm">"在景区随借随还，无需安装APP，扫码即取放回即还。让你1秒钟即可神器到手</div>
        </div>
+       <div class="home_ys icon_ys">
+           <div class="home_ys_img"><img class="icon_img" src="{% static 'images/home/ditan.png' %}"></div>
+           <h6>共享 = 低碳</h6>
+           <div class="home_ys_sm">共享不是省钱，而是一种经济低碳的行为，为人类为全球环境气候改善做了贡献</div>
+       </div>
+       <div class="home_ys icon_ys">
+           <div class="home_ys_img"><img class="icon_img" src="{% static 'images/home/fuyu.png' %}"></div>
+           <h6>共享 = 富裕</h6>
+           <div class="home_ys_sm">享不是节约，而是一种精神和物质富足的表现，无需用物质来显示自己的财富</div>
+       </div>
+       <div class="home_ys icon_ys_right">
+           <div class="home_ys_img"><img class="icon_img" src="{% static 'images/home/shishang.png' %}"></div>
+           <h6>共享 = 时尚</h6>
+           <div class="home_ys_sm">"共享不是将就，而是一种时尚，代表了前卫和新潮社会生活方式</div>
+       </div>
     </div>
 
 
