--- a/static/css/style.css
+++ b/static/css/style.css
@@ -44,7 +44,8 @@ h6{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold}
 
 .icon_ys{width:26%;height: 200px;margin-right: 11%; }
 .icon_ys_right{width:26%;height: 200px;margin-right:0; }
-.icon_img{width: 70px;height: auto;overflow: hidden;}
+.icon_img{width: 60px;height: auto;overflow: hidden;}
+.icon_h5{margin-bottom: 60px;}
 
 
 
