调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -66,7 +66,7 @@
     </div>
     <div class="con_white">
        <h2>开启旅行共享时代 享受时尚轻生活</h2>
-        <h5>轻拍科技，以共享自拍杆为基点。利用技术结合共享模式，让您的出游更轻松</h5>
+        <h5 class="icon_h5">轻拍科技，以共享自拍杆为基点。利用技术结合共享模式，让您的出游更轻松</h5>
        <div class="home_ys icon_ys">
            <div class="home_ys_img"><img class="icon_img" src="{% static 'images/home/paizhao.png' %}"></div>
            <h6>自拍更完美</h6>
