调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -88,12 +88,12 @@
            <div class="home_ys_sm">共享不是省钱，而是一种经济低碳的行为，为人类为全球环境气候改善做了贡献</div>
        </div>
        <div class="home_ys icon_ys">
-           <div class="home_ys_img"><img class="icon_img_sm" src="{% static 'images/home/fuyu.png' %}"></div>
+           <div class="home_ys_img"><img class="icon_img" src="{% static 'images/home/fuyu.png' %}"></div>
            <h6>共享 = 富裕</h6>
            <div class="home_ys_sm">享不是节约，而是一种精神和物质富足的表现，无需用物质来显示自己的财富</div>
        </div>
        <div class="home_ys icon_ys_right">
-           <div class="home_ys_img"><img class="icon_img_sm" src="{% static 'images/home/shishang.png' %}"></div>
+           <div class="home_ys_img"><img class="icon_img" src="{% static 'images/home/shishang.png' %}"></div>
            <h6>共享 = 时尚</h6>
            <div class="home_ys_sm">"共享不是将就，而是一种时尚，代表了前卫和新潮社会生活方式</div>
        </div>
