--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,13 +54,11 @@ h6{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold}
 .star a{text-decoration: none;color: white;}
 .star a:hover{text-decoration: none;font-weight: bold;}
 
-
 body a { color: black; text-decoration: none; }
 
-.title{color: darkorchid; font-size: 40px;}
 
 .foot_con{width: 600px;
-    margin: 100px auto;
+    margin: 0 auto;
     text-align: center;
     clear: both;}
 .foot_con_imgbox {
@@ -82,11 +80,11 @@ body a { color: black; text-decoration: none; }
 .foot_cont_bq{
     clear: both;
     width: 100%;
-    height: 60px;
+    height: 20px;
     border-top: 1px #eeeeee solid;
     text-align: center;
     font-size: 14px;
-    line-height: 60px;
+    line-height: 20px;
     color: #333333;
 }
 
