--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,8 +42,8 @@ h6{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold}
 .sy3{padding-top: 165px;padding-left: 185px;}
 .sy4{padding-top: 390px;padding-left: 30px;}
 
-.icon_ys{width:26%;height: 200px;margin-right: 11%; }
-.icon_ys_right{width:26%;height: 200px;margin-right:0; }
+.icon_ys{width:26%;height: 210px;margin-right: 11%; }
+.icon_ys_right{width:26%;height: 210px;margin-right:0; }
 .icon_img{width: 60px;height: auto;overflow: hidden;}
 .icon_img_sm{width: 70px;height: auto;overflow: hidden;}
 .icon_h5{margin-bottom: 60px;}
@@ -80,12 +80,13 @@ body a { color: black; text-decoration: none; }
 .foot_cont_bq{
     clear: both;
     width: 100%;
-    height: 20px;
+    height: 30px;
     border-top: 1px #eeeeee solid;
     text-align: center;
     font-size: 14px;
-    line-height: 20px;
+    line-height: 30px;
     color: #333333;
+    margin-bottom: -30px;
 }
 
 
