--- a/static/css/style.css
+++ b/static/css/style.css
@@ -64,7 +64,7 @@ body a { color: black; text-decoration: none; }
 .foot_con_imgbox {
     width: 140px;
     height: 200px;
-    margin: 30px;
+    margin: 20px;
     line-height: 30px;
     font-size: 14px;
     text-align: center;
@@ -80,11 +80,12 @@ body a { color: black; text-decoration: none; }
 .foot_cont_bq{
     clear: both;
     width: 100%;
-    height: 30px;
+    height: 50px;
     border-top: 1px #eeeeee solid;
     text-align: center;
     font-size: 14px;
     line-height: 50px;
+    background-color: #f6f6f6;
     color: #333333;
 }
 
