--- a/static/css/style.css
+++ b/static/css/style.css
@@ -57,7 +57,7 @@ h6{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold}
 body a { color: black; text-decoration: none; }
 
 
-.foot_con{width: 600px;
+.foot_con{width: 600px;height: 200px;
     margin: 0 auto;
     text-align: center;
     clear: both;}
