调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -37,7 +37,7 @@
     </div>
     <div class="con_white">
        <h2>当旅游遇上共享</h2>
-        <h5>出游拍照留念发朋友圈是必须的，有了共享更应该是轻松方便的</h5>
+        <h5>出游哪能不拍照留念，发社交媒体签到打卡。轻拍科技共享自拍杆，让出游自拍更轻松方便</h5>
        <div class="home_ys">
            <div class="home_ys_img"><img class="ys_imge" src="{% static 'images/home/home_qs.jpg' %}"></div>
            <h6>生命需要旅行</h6>
