调整官网首页

--- a/templates/home/ownpic.html
+++ b/templates/home/ownpic.html
@@ -5,6 +5,36 @@
 {% block title %}自拍神器{% endblock %}
 
 {% block content %}
+    <div class="home_content_bg">
+       <div class="home_content">
+        <div class="head_top">
+
+          <div class="logo">
+            <a href="/" target="_self" title="回首页"><img src="/static/images/logo1.png" border="0" onMouseOver="this.src='/static/images/logo2.png'" onMouseOut="this.src='/static/images/logo1.png'" /></a>
+          </div>
+          <div class="navigation">
+            <ul class="menu">
+                <li>
+                    <a href="/home/home"><span class="menutitle"><span >首页</span><span
+                            class="menudesc"></span></a>
+                </li>
+                <li>
+                    <span class="crunt">自拍神器</span>
+                </li>
+                <li>
+                    <a href="/home/about"><span class="menutitle">关于我们</span><span
+                            class="menudesc"></span></a>
+                </li>
+            </ul>
+        </div>
+          <div class="star"><a href="#" title="立即体验">立即体验</a></div>
+</div>
+        <div class="home_slogn">
+            <h1>轻生活 轻旅行 嗨自拍</h1>
+            <h4>随处可用的自拍神器，助你留影记录美丽、签到分享精彩</h4>
+        </div>
+    </div>
+    </div>
     <div class="main_content_zp"></div>
     <div class="zp_bd"><img src="{% static 'images/ownpic/bd.gif' %}"></div>
     <div class="zp_bd_sm">我们正紧张研发中，客官敬请期待<br>
