调整官网首页

--- a/templates/home/ownpic.html
+++ b/templates/home/ownpic.html
@@ -5,8 +5,8 @@
 {% block title %}自拍神器{% endblock %}
 
 {% block content %}
-    <div class="home_content_bg">
-       <div class="home_content">
+    <div class="cp_content_bg">
+       <div class="cp_content">
         <div class="head_top">
 
           <div class="logo">
