--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,9 +6,9 @@ body {margin:0 auto; padding:0 auto; height: 100%;}
 .home_content{ width:100%;height: 550px;background-size:100% 100%; background: url("/static/images/home/home_bg.jpg") center no-repeat; }
 .home_slogn{width: 80%;color: white;text-align: left;margin: 150px auto;}
 
-.cp_content_bg{ width:100%;height: 500px; background: url("/static/images/ownpic/cp_bgt.jpg") repeat-x;background-color: #cc3399; }
+.cp_content_bg{ width:100%;height: 500px; background: url("/static/images/ownpic/cp_bgt.jpg") repeat-x;}
 .cp_content{ width:100%;height: 500px;background-size:100% 100%; background: url("/static/images/ownpic/cp_bg.jpg") center no-repeat; }
-.cp_slogn{width: 80%;color: white;text-align: left;margin: 120px auto;}
+.cp_slogn{width: 80%;color: white;text-align: left;margin: 100px auto;}
 
 
 
