调整官网首页

--- a/templates/home/ownpic.html
+++ b/templates/home/ownpic.html
@@ -29,9 +29,9 @@
         </div>
           <div class="star"><a href="#" title="立即体验">立即体验</a></div>
 </div>
-        <div class="home_slogn">
-            <h1>轻生活 轻旅行 嗨自拍</h1>
-            <h4>随处可用的自拍神器，助你留影记录美丽、签到分享精彩</h4>
+        <div class="cp_slogn">
+            <h1>随用随借 随借随还</h1>
+            <h4>让技术和共享助您，轻松出游，完美自拍，快乐分享</h4>
         </div>
     </div>
     </div>
