--- a/templates/home/ownpic.html
+++ b/templates/home/ownpic.html
@@ -35,6 +35,13 @@
         </div>
     </div>
     </div>
+    <div class="con_white">
+       <h2>轻松四步 秒借秒还</h2>
+        <h5>不用购买和携带，随借随还。消费升级，轻松出游。妈妈再也不用担心忘带了</h5>
+       <div class="cp_sylc">
+
+       </div>
+    </div>
     <div class="main_content_zp"></div>
     <div class="zp_bd"><img src="{% static 'images/ownpic/bd.gif' %}"></div>
     <div class="zp_bd_sm">我们正紧张研发中，客官敬请期待<br>
