调整官网首页

--- a/templates/home/ownpic.html
+++ b/templates/home/ownpic.html
@@ -39,13 +39,9 @@
        <h2>轻松四步 秒借秒还</h2>
         <h5>不用购买和携带，随借随还。消费升级，轻松出游。妈妈再也不用担心忘带了</h5>
        <div class="cp_sylc">
-sa
+saasg
        </div>
     </div>
-    <div class="main_content_zp"></div>
-    <div class="zp_bd"><img src="{% static 'images/ownpic/bd.gif' %}"></div>
-    <div class="zp_bd_sm">我们正紧张研发中，客官敬请期待<br>
-自拍神器即将出炉…</div>
 
 
 {% endblock %}
