--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,7 +53,7 @@ h6{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold}
 .icon_img_sm{width: 70px;height: auto;overflow: hidden;}
 .icon_h5{margin-bottom: 60px;}
 
-.cp_sylc{{width: 900px; height: 200px; margin: 80px auto;background-size:100% 100%; background: url("/static/images/ownpic/cp_sylc.jpg") center no-repeat;}}
+.cp_sylc{width: 900px; height: 200px; margin: 80px auto;background-size:100% 100%; background: url("/static/images/ownpic/cp_sylc.jpg") center no-repeat;}
 
 
 .star{float: right;width: 80px;height: 26px;font-size: 14px;border: 1px dashed #eeeeee;line-height: 26px;text-align: center;margin-top: 12px;}
