调整官网首页

--- a/templates/home/ownpic.html
+++ b/templates/home/ownpic.html
@@ -15,15 +15,13 @@
           <div class="navigation">
             <ul class="menu">
                 <li>
-                    <a href="/home/home"><span class="menutitle"><span >首页</span><span
-                            class="menudesc"></span></a>
+                    <a href="/home"><span class="menutitle"><span >首页</span></a>
                 </li>
                 <li>
                     <span class="crunt">自拍神器</span>
                 </li>
                 <li>
-                    <a href="/home/about"><span class="menutitle">关于我们</span><span
-                            class="menudesc"></span></a>
+                    <a href="/home/about"><span class="menutitle">关于我们</span></a>
                 </li>
             </ul>
         </div>
