调整官网首页

--- a/templates/home/ownpic.html
+++ b/templates/home/ownpic.html
@@ -36,8 +36,12 @@
     <div class="con_white">
        <h2>轻松四步 秒借秒还</h2>
         <h5>不用购买和携带，随借随还。消费升级，轻松出游。妈妈再也不用担心忘带了</h5>
-       <div class="cp_sylc">
-saasg
+       <div class="cp_sylc"></div>
+       <div class="cp_lc_cont">
+            <div class="cp_lc_li">
+                <h5>第一步</h5>
+                <div class="cp_lc_sm">就近机柜，随手可用</div>
+            </div>
        </div>
     </div>
 
