--- a/templates/home/ownpic.html
+++ b/templates/home/ownpic.html
@@ -42,6 +42,18 @@
                 <h6>第一步</h6>
                 <div class="cp_lc_sm">就近机柜，随手可用</div>
             </div>
+            <div class="cp_lc_li">
+                <h6>第二步</h6>
+                <div class="cp_lc_sm">手机扫码，一秒取杆</div>
+            </div>
+            <div class="cp_lc_li">
+                <h6>第三步</h6>
+                <div class="cp_lc_sm">享受美好，想拍就拍</div>
+            </div>
+            <div class="cp_lc_li">
+                <h6>第四步</h6>
+                <div class="cp_lc_sm">随处可还，付几块钱</div>
+            </div>
        </div>
     </div>
 
