--- a/templates/home/ownpic.html
+++ b/templates/home/ownpic.html
@@ -50,7 +50,7 @@
                 <h6>第三步</h6>
                 <div class="cp_lc_sm">享受美好，想拍就拍</div>
             </div>
-            <div class="cp_lc_li">
+            <div class="cp_lc_li cp_lc_li_right">
                 <h6>第四步</h6>
                 <div class="cp_lc_sm">随处可还，付几块钱</div>
             </div>
