--- a/static/css/style.css
+++ b/static/css/style.css
@@ -60,6 +60,14 @@ h6{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold}
 .cp_lc_sm{float: left;width: 100%;font-size: 14px;line-height: 22px;color: #666666;margin-top: -50px;font-weight: 100;}
 
 
+.zpg_cont{width: 80%;height: 400px;margin: 50px auto;}
+.zpg_cont_li{width: 30%;height: 100%;float: left;margin-right: 5%;}
+.zpg_cont_li_right{margin-right: 0;}
+.zpg_left{float: right;width: 100%;font-size: 14px;line-height: 22px;color: #666666;font-weight: 100;}
+.zpg_left_img{float: right;height: 60px;height: auto;overflow: hidden;}
+
+
+
 .star{float: right;width: 80px;height: 26px;font-size: 14px;border: 1px dashed #eeeeee;line-height: 26px;text-align: center;margin-top: 12px;}
 .star a{text-decoration: none;color: white;}
 .star a:hover{text-decoration: none;font-weight: bold;}
