调整官网首页

--- a/templates/home/ownpic.html
+++ b/templates/home/ownpic.html
@@ -15,7 +15,7 @@
           <div class="navigation">
             <ul class="menu">
                 <li>
-                    <a href="/home"><span class="menutitle"><span >首页</span></a>
+                    <a href="/home"><span class="menutitle">首页</span></a>
                 </li>
                 <li>
                     <span class="crunt">自拍神器</span>
@@ -57,7 +57,16 @@
        </div>
     </div>
     <div class="con_gray">
-
+        <h2>时尚自拍杆 任你嗨自拍</h2>
+        <h5>设计时尚大方，使用方便灵活，还可应急给手机充电</h5>
+        <div class="zpg_cont">
+            <div class="zpg_cont_li">
+                <div class="zpg_left">
+                    <div class="zpg_left_img"><img class="icon_img" src="/static/images/shaoma.png"  /></div>
+                    <h5>扫码取杆</h5>支持微信和支付宝扫码即取<br>无需安装APP，取杆简单
+                </div>
+            </div>
+        </div>
     </div>
 
 
