调整官网首页

--- a/templates/home/ownpic.html
+++ b/templates/home/ownpic.html
@@ -62,7 +62,7 @@
         <div class="zpg_cont">
             <div class="zpg_cont_li">
                 <div class="zpg_left">
-                    <div class="zpg_left_img"><img class="icon_img" src="/static/images/shaoma.png"  /></div>
+                    <div class="zpg_left_img"><img class="icon_img" src="/static/images/ownpic/shaoma.png"  /></div>
                     <h5>扫码取杆</h5>支持微信和支付宝扫码即取<br>无需安装APP，取杆简单
                 </div>
             </div>
