--- a/static/css/style.css
+++ b/static/css/style.css
@@ -63,7 +63,7 @@ h6{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold}
 .zpg_cont{width: 80%;height: 400px;margin: 50px auto;}
 .zpg_cont_li{width: 30%;height: 100%;float: left;margin-right: 5%;}
 .zpg_cont_li_right{margin-right: 0;}
-.zpg_left{float: right;width: 100%;font-size: 14px;line-height: 22px;color: #666666;font-weight: 100;}
+.zpg_left{float: right;width: 100%;font-size: 14px;line-height: 22px;color: #666666;font-weight: 100;text-align: right;}
 .zpg_left_img{float: right;height: 60px;height: auto;overflow: hidden;}
 
 
