调整官网首页

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -65,6 +65,7 @@ h6{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold}
 .zpg_cont_li_right{margin-right: 0;}
 .zpg_left{float: right;width: 100%;font-size: 14px;line-height: 22px;color: #666666;font-weight: 100;text-align: right;}
 .zpg_left_img{float: right;height: 60px;height: auto;overflow: hidden;width: 100%;}
+.zpg_left_sm{float: right;width: 100%;font-size: 14px;line-height: 22px;color: #666666;margin-top: -50px;font-weight: 100;}
 
 
 
