--- a/templates/home/ownpic.html
+++ b/templates/home/ownpic.html
@@ -66,6 +66,16 @@
                     <h6>扫码取杆</h6>
                     <div class="zpg_left_sm">支持微信和支付宝扫码即取<br>无需安装APP，取杆简单</div>
                 </div>
+                <div class="zpg_left">
+                    <div class="zpg_left_img"><img class="icon_img" src="/static/images/ownpic/shaoma.png"  /></div>
+                    <h6>扫码取杆</h6>
+                    <div class="zpg_left_sm">支持微信和支付宝扫码即取<br>无需安装APP，取杆简单</div>
+                </div>
+                <div class="zpg_left">
+                    <div class="zpg_left_img"><img class="icon_img" src="/static/images/ownpic/shaoma.png"  /></div>
+                    <h6>扫码取杆</h6>
+                    <div class="zpg_left_sm">支持微信和支付宝扫码即取<br>无需安装APP，取杆简单</div>
+                </div>
             </div>
         </div>
     </div>
