--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,7 +66,7 @@ h6{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold}
 .zpg_left{float: right;width: 100%;text-align: right;margin-bottom: 30px;}
 .zpg_left_img{float: right;height: 60px;height: auto;overflow: hidden;width: 100%;margin-bottom: -5px;}
 .zpg_left_sm{float: right;width: 100%;font-size: 14px;line-height: 22px;color: #666666;margin-top: -50px;font-weight: 100;}
-.zpg_img{width: 100%;height: auto;overflow: hidden;border: 1px dashed #eeeeee;}
+.zpg_img{width: 100%;height: 480px;overflow: hidden;border: 1px dashed #eeeeee;}
 
 
 
