--- a/static/css/style.css
+++ b/static/css/style.css
@@ -67,6 +67,7 @@ h6{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold}
 .zpg_left_img{float: right;height: 40px;overflow: hidden;width: 100%;margin-bottom: -5px;}
 .zpg_left_sm{float: right;width: 100%;font-size: 14px;line-height: 22px;color: #666666;margin-top: -50px;font-weight: 100;}
 .zpg_img{width: 100%;height: 480px;overflow: hidden;border: 1px dashed #eeeeee;}
+.icon_img_zpg{width: 40px;height: auto;overflow: hidden;}
 
 
 
