调整官网首页

--- a/templates/home/ownpic.html
+++ b/templates/home/ownpic.html
@@ -62,17 +62,17 @@
         <div class="zpg_cont">
             <div class="zpg_cont_li">
                 <div class="zpg_left">
-                    <div class="zpg_left_img"><img class="icon_img" src="/static/images/ownpic/shaoma.png"  /></div>
+                    <div class="zpg_left_img"><img class="icon_img_zpg" src="/static/images/ownpic/shaoma.png"  /></div>
                     <h6>扫码取杆</h6>
                     <div class="zpg_left_sm">支持微信和支付宝扫码即取<br>无需安装APP，取杆简单</div>
                 </div>
                 <div class="zpg_left">
-                    <div class="zpg_left_img"><img class="icon_img" src="/static/images/ownpic/jiujin.png"  /></div>
+                    <div class="zpg_left_img"><img class="icon_img_zpg" src="/static/images/ownpic/jiujin.png"  /></div>
                     <h6>就近可还</h6>
                     <div class="zpg_left_sm">支持任意机柜可归还自拍杆<br>随您就近还杆，轻松便利</div>
                 </div>
                 <div class="zpg_left">
-                    <div class="zpg_left_img"><img class="icon_img" src="/static/images/ownpic/chongdian.png"  /></div>
+                    <div class="zpg_left_img"><img class="icon_img_zpg" src="/static/images/ownpic/chongdian.png"  /></div>
                     <h6>应急充电</h6>
                     <div class="zpg_left_sm">自拍杆集成了充电宝<br>为您自拍或摄影保障电力</div>
                 </div>
