调整官网首页

--- a/templates/home/ownpic.html
+++ b/templates/home/ownpic.html
@@ -82,17 +82,17 @@
                 <div class="zpg_right">
                     <div class="zpg_left_img"><img class="icon_img_zpg" src="/static/images/ownpic/mianfei.png"  /></div>
                     <h6>免费一小时</h6>
-                    <div class="zpg_left_sm">每天一次首小时免费用<br>1小时后，1元/小时，每天8元封顶</div>
+                    <div class="zpg_right_sm">每天一次首小时免费用<br>1小时后，1元/小时，每天8元封顶</div>
                 </div>
                 <div class="zpg_right">
-                    <div class="zpg_left_img"><img class="icon_img_zpg" src="/static/images/ownpic/yajing.png"  /></div>
+                    <div class="zpg_right_img"><img class="icon_img_zpg" src="/static/images/ownpic/yajing.png"  /></div>
                     <h6>部分免押金</h6>
-                    <div class="zpg_left_sm">芝麻信用650分以上，免押金<br>还杆后，押金随时退</div>
+                    <div class="zpg_right_sm">芝麻信用650分以上，免押金<br>还杆后，押金随时退</div>
                 </div>
                 <div class="zpg_right">
-                    <div class="zpg_left_img"><img class="icon_img_zpg" src="/static/images/ownpic/chongdian.png"  /></div>
+                    <div class="zpg_right_img"><img class="icon_img_zpg" src="/static/images/ownpic/goumai.png"  /></div>
                     <h6>喜欢可购买</h6>
-                    <div class="zpg_left_sm">自拍支持出售，仅需49元/根<br>保留超5天未归还，自动转为购买</div>
+                    <div class="zpg_right_sm">自拍支持出售，仅需49元/根<br>保留超5天未归还，自动转为购买</div>
                 </div>
             </div>
         </div>
