调整官网首页

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -59,7 +59,7 @@ h6{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold}
 .cp_lc_li_right{margin-right: 0;}
 .cp_lc_sm{float: left;width: 100%;font-size: 14px;line-height: 22px;color: #666666;margin-top: -50px;font-weight: 100;}
 
-
+.zpg_gray{margin-top: 30px;}
 .zpg_cont{width: 80%;height: 400px;margin: 50px auto;}
 .zpg_cont_li{width: 30%;height: 100%;float: left;margin-right: 5%;text-align: center;}
 .zpg_cont_li_right{margin-right: 0;}
