调整官网首页

--- a/templates/home/ownpic.html
+++ b/templates/home/ownpic.html
@@ -56,7 +56,8 @@
             </div>
        </div>
     </div>
-    <div class="con_gray zpg_gray">
+    <div class="zpg_fg"></div>
+    <div class="con_gray">
         <h2>时尚自拍杆 任你嗨自拍</h2>
         <h5>设计时尚大方，使用方便灵活，还可应急给手机充电</h5>
         <div class="zpg_cont">
