--- a/static/css/style.css
+++ b/static/css/style.css
@@ -72,6 +72,16 @@ h6{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold}
 .zpg_right_img{float: left;height: 40px;overflow: hidden;width: 100%;margin-bottom: -10px;}
 .zpg_right_sm{float: left;width: 100%;font-size: 14px;line-height: 22px;color: #666666;margin-top: -50px;font-weight: 100;}
 
+.jg_cont{width: 80%;height: 500px;margin: 50px auto;}
+.jg_img_cont{float: left;width: 45%;text-align: center;}
+.jg_img{width: auto;height: 500px;overflow: hidden;border: none;}
+.jg_sm_cont{float: left;width: 60%;text-align: left;}
+.jg_sm_cont_li{float: left;width: 100%;height: 120px;}
+.jg_sm_imgt{float: left;width: 120px;height: 120px;margin-left: 20px;margin-right: 30px;border: none;}
+.jg_sm_img{width: 120px;height: 120px;border: none;overflow: hidden;}
+.jg_sm_text{float: left;font-size: 14px;line-height: 22px;color: #666666;margin-top: -50px;font-weight: 100;}
+
+
 
 
 .star{float: right;width: 80px;height: 26px;font-size: 14px;border: 1px dashed #eeeeee;line-height: 26px;text-align: center;margin-top: 12px;}
