--- a/templates/home/ownpic.html
+++ b/templates/home/ownpic.html
@@ -98,6 +98,13 @@
             </div>
         </div>
     </div>
+    <div class="con_white">
+       <h2>炫彩机柜 让自拍杆随借随还</h2>
+        <h5>智能时尚机柜，方便识别查找，取还操作简单</h5>
+       <div class="jg_cont">
+           <div class="jg_img_cont"><img class="jg_img" src="/static/images/ownpic/cp_jg.jpg"  /></div>
+       </div>
+    </div>
 
 
 {% endblock %}
