调整官网首页

--- a/templates/home/ownpic.html
+++ b/templates/home/ownpic.html
@@ -103,6 +103,12 @@
         <h5>智能时尚机柜，方便识别查找，取还操作简单</h5>
        <div class="jg_cont">
            <div class="jg_img_cont"><img class="jg_img" src="/static/images/ownpic/cp_jg.jpg"  /></div>
+           <div class="jg_sm_cont">
+               <div class="jg_sm_cont_li">
+                   <div class="jg_sm_imgt"><img class="jg_sm_img" src="/static/images/ownpic/jg_chuping.jpg"  /></div>
+                   <div class="jg_sm_text">选择借还方式<br>选择微信或支付宝二维码<br>支持机柜直接操作归还</div>
+               </div>
+           </div>
        </div>
     </div>
 
