调整官网首页

--- a/templates/home/ownpic.html
+++ b/templates/home/ownpic.html
@@ -106,6 +106,7 @@
            <div class="jg_sm_cont">
                <div class="jg_sm_cont_li">
                    <div class="jg_sm_imgt"><img class="jg_sm_img" src="/static/images/ownpic/jg_chuping.jpg"  /></div>
+                   <h6>触摸操作屏</h6>
                    <div class="jg_sm_text">选择借还方式<br>选择微信或支付宝二维码<br>支持机柜直接操作归还</div>
                </div>
            </div>
