--- a/static/css/style.css
+++ b/static/css/style.css
@@ -80,6 +80,7 @@ h6{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold}
 .jg_sm_imgt{float: left;width: 120px;height: 120px;margin-left: 20px;margin-right: 30px;border: none;}
 .jg_sm_img{width: 120px;height: 120px;border: none;overflow: hidden;}
 .jg_sm_text{float: left;font-size: 14px;line-height: 22px;color: #666666;font-weight: 100;}
+.jg_title{font-size: 16px;line-height: 50px; color: #cc3399;font-weight: bold;width: 300px;}
 
 
 
