调整官网首页

--- a/templates/home/ownpic.html
+++ b/templates/home/ownpic.html
@@ -109,6 +109,16 @@
                    <div class="jg_title">触摸操作屏</div>
                    <div class="jg_sm_text">选择借还方式<br>选择微信或支付宝二维码<br>支持机柜直接操作归还</div>
                </div>
+               <div class="jg_sm_cont_li">
+                   <div class="jg_sm_imgt"><img class="jg_sm_img" src="/static/images/ownpic/jg_jinchukou.jpg"  /></div>
+                   <div class="jg_title">自拍杆进出口</div>
+                   <div class="jg_sm_text">手机或触屏控制<br>自动打开电源充足的自拍杆<br>放入后自动归位完成还杆选择借还方式</div>
+               </div>
+               <div class="jg_sm_cont_li">
+                   <div class="jg_sm_imgt"><img class="jg_sm_img" src="/static/images/ownpic/jg_sexi.gif"  /></div>
+                   <div class="jg_title">时尚绚丽机柜</div>
+                   <div class="jg_sm_text">靓丽外观让您轻松识别找到<br>独家炫彩外壳与景点完美融合<br>时尚个性就要不同选择借还方式</div>
+               </div>
            </div>
        </div>
     </div>
