调整官网首页

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -5,6 +5,33 @@
 {% block title %}关于我们{% endblock %}
 
 {% block content %}
+       <div class="wm_content">
+        <div class="head_top">
+
+          <div class="logo">
+            <a href="/" target="_self" title="回首页"><img src="/static/images/logo1.png" border="0" onMouseOver="this.src='/static/images/logo2.png'" onMouseOut="this.src='/static/images/logo1.png'" /></a>
+          </div>
+          <div class="navigation">
+            <ul class="menu">
+                <li>
+                    <a href="/home"><span class="menutitle">首页</span></a>
+                </li>
+                <li>
+                    <a href="/home/ownpic"><span class="menutitle">自拍神器</span></a>
+                </li>
+                <li>
+                    <span class="crunt">关于我们</span>
+                </li>
+            </ul>
+        </div>
+          <div class="star"><a href="#" title="立即体验">立即体验</a></div>
+</div>
+        <div class="home_slogn">
+            <h1>轻生活 轻旅行 嗨自拍</h1>
+            <h4>随处可用的自拍神器，助你留影记录美丽、签到分享精彩</h4>
+        </div>
+    </div>
+
     <div class="main_content_about">
        <div class="about_slo">践行共享新模式 开创经济轻旅行</div>
     </div>
