调整官网首页

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -27,9 +27,28 @@
           <div class="star"><a href="#" title="立即体验">立即体验</a></div>
 </div>
         <div class="wm_slogn">
-            <h1>轻生活 轻旅行 嗨自拍</h1>
-            <h4>随处可用的自拍神器，助你留影记录美丽、签到分享精彩</h4>
+            <h1>践行共享新模式 开创经济轻旅行</h1>
+            <h4>轻拍科技帮您放在沉重的旅行装备，只需带上手机带上好心情，出游去享受美好时光吧</h4>
         </div>
+    </div>
+       <div class="con_white">
+       <h2>源自有遗憾的出游</h2>
+        <h5>没有自拍留影，没有拍照签到，好像没有发生过</h5>
+       <div class="home_ys">
+           <div class="home_ys_img"><img class="ys_imge" src="{% static 'images/home/home_qs.jpg' %}"></div>
+           <h6>生命需要旅行</h6>
+           <div class="home_ys_sm">"旅行的真谛，不是运动，而是带动你的灵魂，去寻找到生命的春光。"<br>--（美国作家哲学家）梭罗</div>
+       </div>
+       <div class="home_ys">
+           <div class="home_ys_img"><img class="ys_imge" src="{% static 'images/home/home_pz.jpg' %}"></div>
+           <h6>旅行需要拍照</h6>
+           <div class="home_ys_sm">"好的照片，可以讲出一个故事，可以交流一种思想或表达一种感情。"<br>--（中国摄影记者）陶然</div>
+       </div>
+       <div class="home_ys ys_right">
+           <div class="home_ys_img"><img class="ys_imge" src="{% static 'images/home/home_ss.jpg' %}"></div>
+           <h6>拍照需要自拍杆</h6>
+           <div class="home_ys_sm">"君子生非异也，善假于物也。好的自拍照片，离不开自拍神器"<br>--（战国末期思想家教育家）荀子</div>
+       </div>
     </div>
 
     <div class="main_content_about">
