调整官网首页

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -32,24 +32,20 @@
         </div>
     </div>
        <div class="con_white">
-       <h2>源自有遗憾的出游</h2>
-        <h5>没有自拍留影，没有拍照签到，好像没有发生过</h5>
-       <div class="home_ys">
-           <div class="home_ys_img"><img class="ys_imge" src="{% static 'images/home/home_qs.jpg' %}"></div>
-           <h6>生命需要旅行</h6>
-           <div class="home_ys_sm">"旅行的真谛，不是运动，而是带动你的灵魂，去寻找到生命的春光。"<br>--（美国作家哲学家）梭罗</div>
+          <h2>源自有遗憾的出游</h2>
+          <h5>没有自拍留影，没有拍照签到，好像没有发生过</h5>
+          <div class="qy_cont_left">
+              端午节一家人到浙江舟山群岛玩，想多拍照留影，记录家人在一起美好时光。<br>
+可自拍杆是忘了带，但不想再买。觉得浪费，且下次还可会带，因为家里已有2根了。<br>
+大家相互沦为摄影师，不想找人帮拍。因到好景色需要拍时旁边没人，担心找人拍的<br>
+满意又不好意思让人反复拍。<br>
+结果这次难得的全家出游，没有合影照片记录...<br>
+              <h6>于是想</h6>
+如果这时有租自拍杆的，花1～2块钱，租用几个小时，用好了还回去。<br>
+就不用每次出游都带自拍杆了，需要拍照时随手借一根，用完既还随借随还。<br>
+这多省事多方便！
+          </div>
        </div>
-       <div class="home_ys">
-           <div class="home_ys_img"><img class="ys_imge" src="{% static 'images/home/home_pz.jpg' %}"></div>
-           <h6>旅行需要拍照</h6>
-           <div class="home_ys_sm">"好的照片，可以讲出一个故事，可以交流一种思想或表达一种感情。"<br>--（中国摄影记者）陶然</div>
-       </div>
-       <div class="home_ys ys_right">
-           <div class="home_ys_img"><img class="ys_imge" src="{% static 'images/home/home_ss.jpg' %}"></div>
-           <h6>拍照需要自拍杆</h6>
-           <div class="home_ys_sm">"君子生非异也，善假于物也。好的自拍照片，离不开自拍神器"<br>--（战国末期思想家教育家）荀子</div>
-       </div>
-    </div>
 
     <div class="main_content_about">
        <div class="about_slo">践行共享新模式 开创经济轻旅行</div>
