调整官网首页

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -40,7 +40,7 @@
 大家相互沦为摄影师，不想找人帮拍。因到好景色需要拍时旁边没人，担心找人拍的<br>
 满意又不好意思让人反复拍。<br>
 结果这次难得的全家出游，没有合影照片记录...<br>
-              <h7>于是想</h7><br>
+              <h6>于是想</h6>
 如果这时有租自拍杆的，花1～2块钱，租用几个小时，用好了还回去。<br>
 就不用每次出游都带自拍杆了，需要拍照时随手借一根，用完既还随借随还。<br>
 这多省事多方便！
