调整官网首页

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -34,7 +34,7 @@
        <div class="con_white">
           <h2>源自有遗憾的出游</h2>
           <h5>没有自拍留影，没有拍照签到，好像没有发生过</h5>
-          <div class="qy_cont_left">
+          <div class="qy_cont_left">  <h7>经历是</h7><br>
               端午节一家人到浙江舟山群岛玩，想多拍照留影，记录家人在一起美好时光。<br>
 可自拍杆是忘了带，但不想再买。觉得浪费，且下次还可会带，因为家里已有2根了。<br>
 大家相互沦为摄影师，不想找人帮拍。因到好景色需要拍时旁边没人，担心找人拍的<br>
