调整官网首页

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -45,6 +45,11 @@
 就不用每次出游都带自拍杆了，需要拍照时随手借一根，用完既还随借随还。<br>
 这多省事多方便！
           </div>
+          <div class="qy_cont_right">
+              <div class="qy_img_bg qy_bg1">
+                  <div class="qy_img_text">手不够长</div>
+              </div>
+          </div>
        </div>
 
 
