调整官网首页

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -60,6 +60,16 @@
               </div>
           </div>
        </div>
+       <div class="con_gray">
+       <h2>我们要做的事</h2>
+       <h5>践行共享新模式 开创经济轻旅行</h5>
+       <div class="home_sy">
+           <div class="sy1">就近机柜，随手可用</div>
+           <div class="sy1 sy2">手机扫码，一秒取杆</div>
+           <div class="sy1 sy3">享受美好，想拍就拍</div>
+           <div class="sy1 sy4">随处可还，付几块钱</div>
+       </div>
+    </div>
 
 
     <div class="cont_big hig_story">
